[package]
name = "smallware-tunnel"
version = "0.1.0"
edition = "2021"
description = "Client library and CLI for establishing tunnels to Smallware tunnel server"
license = "MIT"
keywords = ["tunnel", "websocket", "proxy", "smallware"]
categories = ["network-programming", "development-tools"]
repository = "https://github.com/smallware-io/smallware-tunnel"

[lib]
name = "smallware_tunnel"
path = "src/lib.rs"

[[bin]]
name = "smallware-tunnel"
path = "src/bin/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }

# TLS support for custom CA certificates
rustls = {version = "0.23", features=["ring"]}
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "0.26"

# HTTP types
http = "1.1"

# Async utilities
futures = { version = "0.3", features = ["bilock", "unstable"] }
futures-util = "0.3"
bytes = "1.5"
flume = "0.11"
pin-project-lite = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# JWT generation
jsonwebtoken = "9.3"
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
